--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
@@ -60,70 +60,76 @@
     </script>
 </head>
 <body>
-    <div class="container" id="container">
+    <div class="header">
+        <div class="container" id="container">
+            <span class="flex_header">
+                <div class="logo">
+                    <a href="~/Home/Index" id=""><img src="~/Content/images/logo.png" width="350"></a>
+                    <p class="textlogo">Международная риэлторская инвестиционная компания</p>
+                </div>
+                <div class="search">
+                    <p><form class="form-search" method="get" action="/search" target="_blank"><input type="text" name="q" placeholder="Введите слово или фразу" value="" /></form></p>
 
+                    @if (Session != null && Session["user"] is SessionModel)
+                    {
+                        var session = Session["user"] as SessionModel;
 
-        <div class="header">
+                        <div class="your_name">
+                            <div><p>Ваш логин:</p></div>
+                            @if (!String.IsNullOrEmpty(session.User.Login))
+                            {
+                                <div class="your_login"><p><a href="~/cabinet/profile" class="">@session.User.Login</a></p></div>
 
-            <div class="logo">
-                <a href="~/Home/Index" id=""><img src="~/Content/images/logo.png" width="300"></a>
-                <p class="textlogo">Международная риэлторская инвестиционная компания</p>
-            </div>
+                            }
+                            else
+                            {
+                                <div class="your_login"><p><a href="~/cabinet/profile" class="">@session.User.Email</a></p></div>
+                            }
+                            <div class="logout"><p>@Html.ActionLink("Выйти", "logout", "authorize")</p></div>
+                        </div>
+                    }
+                </div>
 
-            <div class="search">
-                <p><form class="form-search" method="get" action="/search" target="_blank"><input type="text" name="q" placeholder="Введите слово или фразу" value="" /></form></p>
-
-                @if (Session != null && Session["user"] is SessionModel)
-                {
-                    var session = Session["user"] as SessionModel;
-
-                    <div class="your_name">
-                        <div><p>Ваш логин:</p></div>
-                        @if (!String.IsNullOrEmpty(session.User.Login))
-                        {
-                            <div class="your_login"><p><a href="~/cabinet/profile" class="">@session.User.Login</a></p></div>
-
-                        }
-                        else
-                        {
-                            <div class="your_login"><p><a href="~/cabinet/profile" class="">@session.User.Email</a></p></div>
-                        }
-                        <div class="logout"><p>@Html.ActionLink("Выйти", "logout", "authorize")</p></div>
+                <div class="contactinfo">
+                    <div class="tel">
+                        <div class="imgtel">
+                            <img src="~/Content/images/tel.png">
+                        </div>
+                        <div class="number">
+                            <p>+38093 057 7110</p>
+                            <p>+38048 788 6707</p>
+                        </div>
                     </div>
-                }
-            </div>
-
-            <div class="contactinfo">
-                <div class="tel">
-                    <div class="imgtel">
-                        <img src="~/Content/images/tel.png">
-                    </div>
-                    <div class="number">
-                        <p>+38093 057 7110</p>
-                        <p>+38048 788 6707</p>
+                    <div class="social">
+                        <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
+                        <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
+                        <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
+                        <a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>
                     </div>
                 </div>
-                <div class="social">
-                    <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
-                    <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
-                    <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
-                    <a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>
+
+                <div class="feedback">
+                    <a href="~/cart/index" id="fav">Избранное</a>
+                    <a href="~/email/index" id="blink">Обратный звонок</a>
                 </div>
-            </div>
 
-            <div class="feedback">
-                <a href="~/cart/index" id="fav">Избранное</a>
-                <a href="~/email/index" id="blink">Обратный звонок</a>
-            </div>
-
+            </span>
         </div>
+    </div>
 
-        <div id="nav">
+
+
+    <div id="nav">
+        <div class="container" id="container">
             <div class="navigation">
                 <ol>
                     <li>
                         <a id="">Продажа</a>
                         <ol>
+                            @*<li>@Html.ActionLink("Купить квартиру", "flat", "sale")</li>
+                                <li>@Html.ActionLink("Купить дом", "house", "sale")</li>
+                                <li>@Html.ActionLink("Купить участок", "homeStead", "sale")</li>
+                                <li>@Html.ActionLink("Купить коммерческую", "commerce", "sale")</li>*@
                             <li><a href="~/sale/flat">Купить квартиру</a></li>
                             <li><a href="~/sale/house">Купить дом</a></li>
                             <li><a href="~/sale/homestead">Купить участок</a></li>
@@ -131,8 +137,11 @@
                         </ol>
                     </li>
                     <li>
-                        <a id="">Аренда</a>
+                        <a href="#" id="">Аренда</a>
                         <ol>
+                            @*<li>@Html.ActionLink("Снять квартиру", "flat", "rent")</li>*@
+                            @*<li>@Html.ActionLink("Снять дом", "house", "rent")</li>*@
+                            @*<li>@Html.ActionLink("Снять участок", "homeStead", "rent")</li>*@
                             <li><a href="~/rent/flat">Снять квартиру</a></li>
                             <li><a href="~/rent/house">Снять дом</a></li>
                             @*<li><a href="~/rent/homestead">Снять участок</a></li>*@
@@ -147,8 +156,10 @@
                             <li><a href="~/home/about">О компании</a></li>
                             <li><a href="~/vacancy/">Вакансии агенства</a></li>
                         </ol>
+
+
                     </li>
-                    
+
                 </ol>
             </div>
 
@@ -156,9 +167,11 @@
                 <a href="~/email/index" id="">Хочу продать!</a>
             </div>
         </div>
+    </div>
+    <div class="container" id="container">
         <div id="pagecontent">
 
-            
+
 
             @RenderBody()
         </div>
