--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -33,8 +33,8 @@ body {
 }
 
     #slidebox, #slidebox .listofimg {
-        width: 1500px;
-        height: 570px;
+        /*width:1500px;*/
+        height: 380px;
     }
 
         #slidebox .listofimg {
@@ -52,78 +52,84 @@ body {
             display: block;
             width: 40px;
             height: 40px;
-            top: 365px;
+            top: 165px;
         }
 
-        #slidebox .next {
-            right: 0;
-            margin-right: 92px;
-            background: url(images/slidebox_next.png) no-repeat left top;
+.flex_header { /*new*/
+    display: flex;
+    flex-direction: row;
+}
+
+#slidebox .next {
+    right: 0;
+    margin-right: 92px;
+    background: url(images/slidebox_next.png) no-repeat left top;
+    opacity: 0.7;
+    cursor: pointer;
+}
+
+    #slidebox .next:hover {
+        background: url(images/slidebox_next_g.png) no-repeat left top;
+        opacity: 0.7;
+        cursor: pointer;
+    }
+
+#slidebox .previous {
+    margin-left: 92px;
+    background: url(images/slidebox_prev.png) no-repeat left top;
+    opacity: 0.7;
+    cursor: pointer;
+}
+
+    #slidebox .previous:hover {
+        background: url(images/slidebox_prev_g.png) no-repeat left top;
+        opacity: 0.7;
+        cursor: pointer;
+    }
+
+#slidebox .thumbs {
+    position: absolute;
+    z-index: 2;
+    bottom: 18px;
+    left: 712.5px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    width: 75px;
+}
+
+    #slidebox .thumbs a {
+        width: 12px;
+        height: 12px;
+        display: block;
+        border: 2px solid white;
+        background-color: none;
+        border-radius: 50%;
+        margin-bottom: 2px;
+    }
+
+        #slidebox .thumbs a:hover {
             opacity: 0.7;
-            cursor: pointer;
+            color: #000;
         }
 
-            #slidebox .next:hover {
-                background: url(images/slidebox_next_g.png) no-repeat left top;
-                opacity: 0.7;
-                cursor: pointer;
-            }
-
-        #slidebox .previous {
-            margin-left: 92px;
-            background: url(images/slidebox_prev.png) no-repeat left top;
-            opacity: 0.7;
-            cursor: pointer;
-        }
-
-            #slidebox .previous:hover {
-                background: url(images/slidebox_prev_g.png) no-repeat left top;
-                opacity: 0.7;
-                cursor: pointer;
-            }
-
-        #slidebox .thumbs {
-            position: absolute;
-            z-index: 2;
-            bottom: 18px;
-            left: 712.5px;
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-orient: horizontal;
-            -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-            flex-direction: row;
-            -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
-            justify-content: space-between;
-            width: 75px;
-        }
-
-            #slidebox .thumbs a {
-                width: 12px;
-                height: 12px;
-                display: block;
-                border: 2px solid white;
-                background-color: none;
-                border-radius: 50%;
-                margin-bottom: 2px;
-            }
-
-                #slidebox .thumbs a:hover {
-                    opacity: 0.7;
-                    color: #000;
-                }
-
-            #slidebox .thumbs .thumbActive {
-                width: 12px;
-                height: 12px;
-                display: block;
-                background-color: white;
-                border-radius: 50%;
-            }
+    #slidebox .thumbs .thumbActive {
+        width: 12px;
+        height: 12px;
+        display: block;
+        background-color: white;
+        border-radius: 50%;
+    }
 
 .header {
+    margin: 0 auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -521,8 +527,8 @@ body {
 }
 
 #nav .sell {
-    margin-left: 100px;
-    margin-top: 33px;
+    margin-left: 1286px;
+    margin-top: -50px;
 }
 
     #nav .sell a {
@@ -565,8 +571,8 @@ body {
 }
 
 .knowmore {
-    margin-top: 49px;
-    margin-left: 475px;
+    margin-top: 305px;
+    margin-left: 227px;
 }
 
     .knowmore a {
@@ -846,7 +852,7 @@ body {
         margin-bottom: 20px;
         color: white;
         font-family: "Century Gothic";
-        font-size: 20px;
+        font-size: 19px;
         font-weight: 700;
         text-transform: uppercase;
     }
